fix: Connect button shrinking when name gets too big

--- a/src/app/explore/explore.component.scss
+++ b/src/app/explore/explore.component.scss
@@ -19,6 +19,9 @@ button.mat-raised-button {
   background-color: #{colors.$primary-4};
   color: white;
 }
+:host ::ng-deep .mat-list-text {
+  width: 0;
+}
 mat-card {
   width: 30%;
 }
